[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "CapioProfiler"
version = "0.1.0"
description = "A simple CAPIO trace profiler that shows where CAPIO spends most of its time."
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "tabulate>=0.9.0",
]


[tool.setuptools]
packages = ["CapioProfiler"]
package-data = {}


[project.scripts]
capio-profiler = "CapioProfiler.__main__:main"
