[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "CapioProfiler"
version = "0.1.0"
description = "A simple CAPIO trace profiler that shows where CAPIO spends most of its time."
authors = [
    { name = "Marco Edoardo Santimaria", email = "marcoedoardo.santimaria@unito.it" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "tabulate>=0.9.0",
    "numpy>=2.3.5",
    "textual>=6.6.0",
    "alive_progress>=3.3.0"
]


[tool.setuptools]
packages = ["CapioProfiler"]
package-data = {}


[project.scripts]
capio-profiler = "CapioProfiler.__main__:main"
